--- a/BTG.Application/BTG.Application.csproj
+++ b/BTG.Application/BTG.Application.csproj
@@ -7,11 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.0" />
+    <ProjectReference Include="..\BTG.Domain\BTG.Domain.csproj" />
   </ItemGroup>
 
 </Project>
