--- a/BTG.Api/appsettings.container.json
+++ b/BTG.Api/appsettings.container.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=db_btg; TrustServerCertificate=True; User ID=sa;Password=Desafio@BTG"
+    "DefaultConnection": "Server=sqlserver,1433;Database=db_btg; TrustServerCertificate=True; User ID=sa;Password=Desafio@BTG"
   },
   "Logging": {
     "LogLevel": {
